--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -19,22 +19,22 @@
                         <constraint firstAttribute="width" secondItem="Adt-yX-Kcn" secondAttribute="height" multiplier="1:1" id="QpK-Bh-3pn"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌曲名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRQ-Sl-Nih">
-                    <rect key="frame" x="30" y="268" width="54" height="22"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-CoverMask" translatesAutoresizingMaskIntoConstraints="NO" id="I5f-fe-wyk">
+                    <rect key="frame" x="10" y="172" width="300" height="128"/>
                     <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="演唱者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoX-pC-2kt">
-                    <rect key="frame" x="94" y="268" width="54" height="22"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="Izd-nn-Ggz"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="歌曲名 演唱者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRQ-Sl-Nih">
+                    <rect key="frame" x="22" y="268" width="248" height="22"/>
                     <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" contentMode="left" text="Andy矢倉: 评论内容" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="207" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
-                    <rect key="frame" x="30" y="300" width="260" height="50"/>
+                    <rect key="frame" x="22" y="300" width="276" height="50"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="WM5-Zv-pb0"/>
@@ -58,8 +58,8 @@
                         <constraint firstAttribute="width" constant="20" id="kGm-cZ-R9b"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
-                    <rect key="frame" x="270" y="268" width="20" height="22"/>
+                <button opaque="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
+                    <rect key="frame" x="278" y="268" width="20" height="22"/>
                     <animations/>
                     <state key="normal" image="HP-UnStarIcon"/>
                     <state key="selected" image="HP-StarIcon"/>
@@ -73,33 +73,35 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="10" id="1xn-AD-Vcl"/>
                 <constraint firstItem="dkl-aD-tRT" firstAttribute="leading" secondItem="G7H-iu-GBN" secondAttribute="trailing" constant="8" id="9E2-tH-8uI"/>
+                <constraint firstItem="I5f-fe-wyk" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="BR9-HB-nqK"/>
                 <constraint firstItem="G7H-iu-GBN" firstAttribute="centerY" secondItem="dkl-aD-tRT" secondAttribute="centerY" id="OMS-Xf-qYo"/>
-                <constraint firstItem="NoX-pC-2kt" firstAttribute="bottom" secondItem="lRQ-Sl-Nih" secondAttribute="bottom" id="OQr-59-DnV"/>
-                <constraint firstItem="NoX-pC-2kt" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="trailing" constant="10" id="PjO-br-AJo"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="leading" id="SnG-ha-3hk"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="U76-S6-GrS"/>
-                <constraint firstItem="lRQ-Sl-Nih" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" constant="20" id="UBI-bI-X3r"/>
+                <constraint firstItem="lRQ-Sl-Nih" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" constant="12" id="UBI-bI-X3r"/>
                 <constraint firstItem="dkl-aD-tRT" firstAttribute="top" secondItem="fmy-Es-e4Z" secondAttribute="bottom" constant="10" id="UE8-DA-brT"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="trailing" secondItem="wzP-as-myT" secondAttribute="trailing" id="ZSF-HZ-8kH"/>
+                <constraint firstItem="I5f-fe-wyk" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="dVE-Ge-v42"/>
+                <constraint firstItem="wzP-as-myT" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="trailing" constant="8" id="eSj-Jk-Z71"/>
+                <constraint firstItem="I5f-fe-wyk" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="gAU-Hu-saf"/>
                 <constraint firstItem="dkl-aD-tRT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="gCJ-v4-JYc"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="hiM-qn-igw"/>
                 <constraint firstItem="wzP-as-myT" firstAttribute="bottom" secondItem="lRQ-Sl-Nih" secondAttribute="bottom" id="j91-e4-kug"/>
                 <constraint firstItem="lRQ-Sl-Nih" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="-10" id="jKA-kD-cJa"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="lGy-uv-HfU"/>
-                <constraint firstItem="wzP-as-myT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="-20" id="o6g-Q7-SJz"/>
+                <constraint firstItem="wzP-as-myT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="-12" id="o6g-Q7-SJz"/>
             </constraints>
             <connections>
                 <outlet property="frontCoverView" destination="Adt-yX-Kcn" id="p3x-e1-iFU"/>
                 <outlet property="locationLabel" destination="dkl-aD-tRT" id="HFB-8M-8wU"/>
                 <outlet property="shrareContentLabel" destination="fmy-Es-e4Z" id="4yO-YB-NY4"/>
                 <outlet property="songNameLabel" destination="lRQ-Sl-Nih" id="pBA-Ug-1wi"/>
-                <outlet property="songerNameLabel" destination="NoX-pC-2kt" id="Av2-ci-F3t"/>
                 <outlet property="starButton" destination="wzP-as-myT" id="fQu-cx-fy8"/>
             </connections>
             <point key="canvasLocation" x="535" y="383"/>
         </view>
     </objects>
     <resources>
+        <image name="HP-CoverMask" width="375" height="130"/>
         <image name="HP-DefaultCover" width="250" height="250"/>
         <image name="HP-LocationIcon" width="12" height="17"/>
         <image name="HP-StarIcon" width="20" height="20"/>
