--- a/mia/Base.lproj/MusicDetail.storyboard
+++ b/mia/Base.lproj/MusicDetail.storyboard
@@ -514,6 +514,51 @@
             </objects>
             <point key="canvasLocation" x="-208" y="-139"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="eq5-vL-ouj">
+            <objects>
+                <viewController id="4aZ-sX-QMV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xkg-PB-jeF"/>
+                        <viewControllerLayoutGuide type="bottom" id="s66-DH-tRc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IZK-ay-8K5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MQg-Ee-GDd" customClass="HXMusicDetailTopBar">
+                                <rect key="frame" x="0.0" y="20" width="320" height="60"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="jz4-kF-Mls"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tgm-4z-uZg" customClass="HXBottomBar">
+                                <rect key="frame" x="0.0" y="508" width="320" height="60"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="8bl-el-LjM"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MQg-Ee-GDd" firstAttribute="leading" secondItem="IZK-ay-8K5" secondAttribute="leading" id="E5w-Gq-uvg"/>
+                            <constraint firstAttribute="trailing" secondItem="MQg-Ee-GDd" secondAttribute="trailing" id="NVb-kS-1Dg"/>
+                            <constraint firstAttribute="trailing" secondItem="Tgm-4z-uZg" secondAttribute="trailing" id="NdY-M9-J9I"/>
+                            <constraint firstItem="Tgm-4z-uZg" firstAttribute="leading" secondItem="IZK-ay-8K5" secondAttribute="leading" id="jLt-sg-q0p"/>
+                            <constraint firstItem="s66-DH-tRc" firstAttribute="top" secondItem="Tgm-4z-uZg" secondAttribute="bottom" id="sgD-CT-QID"/>
+                            <constraint firstItem="MQg-Ee-GDd" firstAttribute="top" secondItem="Xkg-PB-jeF" secondAttribute="bottom" id="tDX-HJ-1Gf"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nUW-tx-ep7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="200" y="-139"/>
+        </scene>
     </scenes>
     <resources>
         <image name="HP-CoverMask" width="250" height="65"/>
