--- a/mia/Views/HomePage/BottomBar/HXBottomBar.xib
+++ b/mia/Views/HomePage/BottomBar/HXBottomBar.xib
@@ -6,7 +6,11 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXBottomBar"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXBottomBar">
+            <connections>
+                <outlet property="favoriteButton" destination="3ZA-Kc-3lb" id="eAI-ce-6cO"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="488" height="100"/>
