--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,27 +14,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Adt-yX-Kcn">
-                    <rect key="frame" x="53" y="80" width="214" height="214"/>
-                    <animations/>
+                    <rect key="frame" x="45" y="65" width="230" height="230"/>
                     <color key="backgroundColor" red="0.94509803921568625" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                     <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Adt-yX-Kcn" secondAttribute="height" multiplier="1:1" id="QpK-Bh-3pn"/>
+                        <constraint firstAttribute="width" constant="230" id="p2O-fX-rua"/>
                     </constraints>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="4sq-YO-SqG" appends="YES" id="mjY-EV-qwO"/>
                     </connections>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HP-CoverMask" translatesAutoresizingMaskIntoConstraints="NO" id="D9t-6x-o7k">
-                    <rect key="frame" x="53" y="229" width="214" height="65"/>
-                    <animations/>
+                    <rect key="frame" x="45" y="230" width="230" height="65"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="65" id="qLo-i7-3fg"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EuO-ig-wsS">
-                    <rect key="frame" x="133" y="160" width="55" height="55"/>
-                    <animations/>
+                    <rect key="frame" x="133" y="153" width="55" height="55"/>
                     <state key="normal" image="HP-PauseIcon"/>
                     <state key="selected" image="HP-PlayIcon"/>
                     <connections>
@@ -43,8 +40,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
-                    <rect key="frame" x="140" y="314" width="40" height="40"/>
-                    <animations/>
+                    <rect key="frame" x="140" y="305" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="wzP-as-myT" secondAttribute="height" multiplier="1:1" id="Inj-Jl-gVj"/>
                         <constraint firstAttribute="width" constant="40" id="cli-89-JVy"/>
@@ -55,8 +51,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" contentMode="left" text="评论内容+♫地理位置信息" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
-                    <rect key="frame" x="53" y="422" width="214" height="20"/>
-                    <animations/>
+                    <rect key="frame" x="45" y="413" width="230" height="20"/>
                     <gestureRecognizers/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -66,38 +61,28 @@
                             <real key="value" value="7"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
-                    <connections>
-                        <outletCollection property="gestureRecognizers" destination="W0X-B7-fvY" appends="YES" id="J3t-Ff-4eA"/>
-                    </connections>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="生如夏花" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZT2-TF-oW0">
-                    <rect key="frame" x="53" y="14" width="214" height="20"/>
-                    <animations/>
+                    <rect key="frame" x="45" y="14" width="230" height="20"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朴树" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRy-kE-hZ9">
-                    <rect key="frame" x="53" y="34" width="214" height="17"/>
-                    <animations/>
+                    <rect key="frame" x="45" y="34" width="230" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享者昵称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBx-px-WgB">
-                    <rect key="frame" x="120" y="388" width="80" height="20"/>
-                    <animations/>
+                    <rect key="frame" x="120" y="379" width="80" height="20"/>
                     <gestureRecognizers/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
-                    <connections>
-                        <outletCollection property="gestureRecognizers" destination="crf-jz-X8m" appends="YES" id="7DN-nD-6zh"/>
-                    </connections>
                 </label>
                 <progressView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WMI-Wc-Fx1">
-                    <rect key="frame" x="53" y="289" width="214" height="5"/>
-                    <animations/>
+                    <rect key="frame" x="45" y="285" width="230" height="5"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="4" id="PUk-Ch-fA0"/>
                     </constraints>
@@ -105,7 +90,6 @@
                     <color key="trackTintColor" red="1" green="1" blue="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                 </progressView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="0hi-7O-Uqb"/>
@@ -124,12 +108,11 @@
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="Ogg-gF-1RN"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="PEr-Bm-9E7"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="R15-Zk-3Zd"/>
-                <constraint firstItem="Adt-yX-Kcn" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="2:3" id="SyY-xB-YQz"/>
                 <constraint firstItem="XRy-kE-hZ9" firstAttribute="centerX" secondItem="ZT2-TF-oW0" secondAttribute="centerX" id="ZDg-s5-PqR"/>
                 <constraint firstItem="gBx-px-WgB" firstAttribute="top" secondItem="wzP-as-myT" secondAttribute="bottom" constant="34" id="aJZ-qb-c3q"/>
-                <constraint firstItem="wzP-as-myT" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="20" id="gDx-VG-7kD"/>
+                <constraint firstItem="wzP-as-myT" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="10" id="gDx-VG-7kD"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerY" secondItem="Adt-yX-Kcn" secondAttribute="centerY" id="hIe-Py-Nqj"/>
-                <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="80" id="lGy-uv-HfU"/>
+                <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="65" id="lGy-uv-HfU"/>
                 <constraint firstItem="ZT2-TF-oW0" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="sdq-eu-6Gp"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="spj-XR-aiC"/>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="w2n-fo-0qt"/>
@@ -154,16 +137,6 @@
         <tapGestureRecognizer id="4sq-YO-SqG">
             <connections>
                 <action selector="coverTaped" destination="iN0-l3-epB" id="UOH-v7-Utd"/>
-            </connections>
-        </tapGestureRecognizer>
-        <tapGestureRecognizer id="crf-jz-X8m">
-            <connections>
-                <action selector="sharerNickNameTaped" destination="iN0-l3-epB" id="Ot7-c5-xOF"/>
-            </connections>
-        </tapGestureRecognizer>
-        <tapGestureRecognizer id="W0X-B7-fvY">
-            <connections>
-                <action selector="shareContentTaped" destination="iN0-l3-epB" id="8io-Fk-CeF"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
