--- a/mia/Base.lproj/MusicDetail.storyboard
+++ b/mia/Base.lproj/MusicDetail.storyboard
@@ -43,6 +43,11 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0iG-pd-edV">
                                 <rect key="frame" x="0.0" y="20" width="320" height="488"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableFooterView" hidden="YES" contentMode="scaleToFill" id="oar-Ka-VYp">
+                                    <rect key="frame" x="0.0" y="565" width="320" height="10"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXMusicDetailCoverCell" rowHeight="240" id="KBC-N0-qIX" customClass="HXMusicDetailCoverCell">
                                         <rect key="frame" x="0.0" y="28" width="320" height="240"/>
@@ -224,17 +229,17 @@
                                                             </connections>
                                                         </button>
                                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6S7-ki-cI2" customClass="HXInfectUserView">
-                                                            <rect key="frame" x="60" y="16" width="100" height="30"/>
+                                                            <rect key="frame" x="60" y="15" width="100" height="32"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mQ0-Gl-FT0">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="32"/>
                                                                 </stackView>
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="mQ0-Gl-FT0" firstAttribute="leading" secondItem="6S7-ki-cI2" secondAttribute="leading" id="7rT-Iq-GNc"/>
                                                                 <constraint firstItem="mQ0-Gl-FT0" firstAttribute="top" secondItem="6S7-ki-cI2" secondAttribute="top" id="9jx-R9-bye"/>
                                                                 <constraint firstAttribute="trailing" secondItem="mQ0-Gl-FT0" secondAttribute="trailing" id="bHA-va-YIQ"/>
-                                                                <constraint firstAttribute="height" constant="30" id="hui-2f-6Er"/>
+                                                                <constraint firstAttribute="height" constant="32" id="hui-2f-6Er"/>
                                                                 <constraint firstAttribute="width" constant="100" id="inf-T3-jmE"/>
                                                                 <constraint firstAttribute="bottom" secondItem="mQ0-Gl-FT0" secondAttribute="bottom" id="wdL-yz-b0w"/>
                                                             </constraints>
@@ -380,7 +385,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXMusicDetailCommentCell" rowHeight="50" id="nSA-Kz-XaD" customClass="HXMusicDetailCommentCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXMusicDetailCommentCell" rowHeight="50" id="nSA-Kz-XaD" customClass="HXMusicDetailCommentCell">
                                         <rect key="frame" x="0.0" y="515" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nSA-Kz-XaD" id="mpf-06-yYn">
@@ -388,20 +393,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ftz-PD-tq3">
-                                                    <rect key="frame" x="15" y="0.0" width="35" height="35"/>
+                                                    <rect key="frame" x="15" y="15" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="35" id="bdc-0l-5ur"/>
+                                                        <constraint firstAttribute="width" constant="30" id="bdc-0l-5ur"/>
                                                         <constraint firstAttribute="width" secondItem="Ftz-PD-tq3" secondAttribute="height" multiplier="1:1" id="cTE-dn-wyx"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评论者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDp-0L-54Y">
-                                                    <rect key="frame" x="62" y="0.0" width="250" height="17"/>
+                                                    <rect key="frame" x="57" y="15" width="255" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="评论内容" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="yVH-v7-RDw">
-                                                    <rect key="frame" x="62" y="17" width="250" height="18"/>
+                                                    <rect key="frame" x="57" y="32" width="255" height="18"/>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -412,12 +417,11 @@
                                                 <constraint firstItem="VDp-0L-54Y" firstAttribute="top" secondItem="Ftz-PD-tq3" secondAttribute="top" id="4VB-tx-h55"/>
                                                 <constraint firstItem="Ftz-PD-tq3" firstAttribute="leading" secondItem="mpf-06-yYn" secondAttribute="leading" constant="15" id="64j-uX-2RM"/>
                                                 <constraint firstItem="VDp-0L-54Y" firstAttribute="leading" secondItem="Ftz-PD-tq3" secondAttribute="trailing" constant="12" id="FL9-t2-Rl6"/>
-                                                <constraint firstAttribute="bottom" secondItem="yVH-v7-RDw" secondAttribute="bottom" constant="15" id="H5e-9T-Xvx"/>
+                                                <constraint firstAttribute="bottom" secondItem="yVH-v7-RDw" secondAttribute="bottom" id="H5e-9T-Xvx"/>
                                                 <constraint firstItem="yVH-v7-RDw" firstAttribute="leading" secondItem="VDp-0L-54Y" secondAttribute="leading" id="JvS-P4-e7w"/>
                                                 <constraint firstAttribute="trailing" secondItem="VDp-0L-54Y" secondAttribute="trailing" constant="8" id="gRf-pH-BgJ"/>
-                                                <constraint firstItem="Ftz-PD-tq3" firstAttribute="top" secondItem="mpf-06-yYn" secondAttribute="top" id="gqz-NE-pSx"/>
+                                                <constraint firstItem="Ftz-PD-tq3" firstAttribute="top" secondItem="mpf-06-yYn" secondAttribute="top" constant="15" id="gqz-NE-pSx"/>
                                                 <constraint firstItem="yVH-v7-RDw" firstAttribute="top" secondItem="VDp-0L-54Y" secondAttribute="bottom" id="j82-Oc-EhR"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Ftz-PD-tq3" secondAttribute="bottom" constant="15" id="n8x-Ti-fS7"/>
                                                 <constraint firstItem="yVH-v7-RDw" firstAttribute="trailing" secondItem="VDp-0L-54Y" secondAttribute="trailing" id="wlY-nV-PZZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
